--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'cygre';
-    src: url("/cygre_default/Cygre-Light.ttf");
+    src: url("../cygre_default/Cygre-Light.ttf");
+    font-weight: normal;
 }
 
 * {
@@ -14,9 +15,14 @@ html {
     font-size: 16px;
 }
 
+a.active, a {
+    text-decoration: none;
+    outline: none;
+}
+
 
 :root {
-    --color-number: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%)
+    --color-number: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%);
     --color-bt: linear-gradient(272.85deg, #181919 -6.44%, #205ADD 111.44%);
     --primary-color: linear-gradient(301.05deg, #181919 5.87%, #205ADD 91.47%);
     $text-color-white: #fff;
@@ -35,7 +41,10 @@ body {
 
 h2 {
     font-size: var(--size-h2);
-    color: var(--text-color)
+    color: var(--text-color);
+    text-align: left;
+    font-weight: 500;
+    margin-bottom: 60px;
 }
 
 
@@ -45,6 +54,12 @@ header {
     background: var(--bg-header);
     border-radius: 20px;
     margin-bottom: 107px;
+}
+
+.card {
+    border-radius: 20px;
+    background: var(--color-wh);
+    padding: 40px 20px;
 }
 
 .menu-header {
@@ -58,7 +73,6 @@ header {
         flex-direction: row;
         gap: 20px;
         a {
-            text-decoration: none;
             font-size: 0.87rem;
         }
     }
@@ -70,7 +84,6 @@ header {
     gap: 13px;
     &__number {
         font-size: 0.87rem;
-        text-decoration: none;
     }
 }
 
@@ -82,13 +95,12 @@ header {
 }
 
 .home {
-    .container {
-        display: flex;
-        flex-direction: row;
-    }
+    display: flex;
+    flex-direction: row;
 }
 
 .home-left {
+    position: relative;
     &__title {
         font-size: 4rem;
         font-weight: 500;
@@ -104,12 +116,129 @@ header {
     }
 }
 
+.home-right {
+    position: relative;
+    .arrow {
+        position: absolute;
+        bottom: 200px;
+        left: -40px;
+    }
+    .screw {
+        position: absolute;
+        bottom: 120px;
+        right: 30px;
+    }
+}
 
-
-.bt {
+.btn {
+    font-family: 'cygre';
     background: var(--primary-color);
     padding: 10px 20px;
     border-radius: 20px;
     color: var(--color-wh);
     border: none;
+}
+
+.square {
+    padding: 20px;
+}
+
+.wr-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    .link-disc {
+        color: rgba(0, 0, 0, 1);
+    }
+}
+
+.basic {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.basic-text {
+    padding: 40px 20px;
+    max-width: 426px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+    &__title {
+        font-size: var(--size-h3);
+        font-weight: 600;
+        margin-bottom: 30px;
+    }
+    &__par {
+        margin-bottom: 190px;
+        font-size: 1.5rem;
+    }
+}
+
+.width {
+    width: 100%;
+    font-size: 1.5rem;
+    text-align: left;
+}
+
+.all-serv {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    row-gap: 20px;
+    column-gap: 20px;
+    grid-column: span 8;
+}
+
+.card-serv {
+    grid-column: span 4;
+    .link-serv {
+        &__title {
+            font-size: 2.25rem;
+            font-weight: 600;
+            margin-bottom: 30px;
+        }
+        &__text {
+            font-size: 1.5rem;
+        }
+    }
+}
+
+.dark {
+    background: var(--bg-dark);
+    border-radius: 20px;
+}
+
+.licenses {
+   h2 {
+    color: var(--color-wh)
+   }
+   .all-card {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding: 40px 35px;
+    .all-card-lic {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
+   }
+}
+
+.card-text {
+    margin: 0 auto;
+    &__lic {
+        font-size: 1.25rem;
+        color: rgba(0, 0, 0, 1);
+    }
+    &__name {
+        font-size: 2.25rem;
+        font-weight: 600;
+    }
+}
+
+.stages {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
