--- a/style/style.css
+++ b/style/style.css
@@ -44,12 +44,23 @@ h2 {
   margin-bottom: 60px;
 }
 
+h3 {
+  font-size: 2.25rem;
+  font-weight: 600;
+  line-height: 43.2px;
+  text-align: left;
+}
+
 header {
   height: 73px;
   width: 100%;
   background: var(--bg-header);
   border-radius: 20px;
   margin-bottom: 107px;
+}
+
+section {
+  margin-bottom: 100px;
 }
 
 .card {
@@ -225,13 +236,34 @@ header {
   font-size: 1.25rem;
   color: rgb(0, 0, 0);
 }
-.card-text__name {
-  font-size: 2.25rem;
-  font-weight: 600;
-}
 
 .stages {
   display: flex;
   flex-direction: row;
   gap: 20px;
+}
+
+.card-st {
+  width: 100%;
+  max-width: 493px;
+}
+.card-st__title {
+  margin-bottom: 22px;
+}
+.card-st__text {
+  font-size: 1.25rem;
+  margin-bottom: 70px;
+}
+.card-st__result {
+  color: rgb(0, 0, 0);
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.form-crm {
+  border-radius: 20px;
+  background: var(--primary-color);
+}
+.form-crm h2 {
+  color: var(--color-wh);
 }/*# sourceMappingURL=style.css.map */
