--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,7 @@ section {
 }
 .menu-header .nav-menu a {
   font-size: 0.87rem;
+  color: #000;
 }
 
 .button-tel {
@@ -197,15 +198,16 @@ section {
   grid-column: span 8;
 }
 
-.card-serv {
+.link-serv {
+  color: #000;
   grid-column: span 4;
 }
-.card-serv .link-serv__title {
+.link-serv__title {
   font-size: 2.25rem;
   font-weight: 600;
   margin-bottom: 30px;
 }
-.card-serv .link-serv__text {
+.link-serv__text {
   font-size: 1.5rem;
 }
 
@@ -213,17 +215,17 @@ section {
   background: var(--bg-dark);
   border-radius: 20px;
 }
-
-.licenses h2 {
+.dark h2 {
   color: var(--color-wh);
 }
-.licenses .all-card {
+
+.all-card {
   display: flex;
   flex-direction: row;
   gap: 20px;
   padding: 40px 35px;
 }
-.licenses .all-card .all-card-lic {
+.all-card .all-card-lic {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -264,9 +266,29 @@ section {
   border-radius: 20px;
   background: var(--primary-color);
 }
-.form-crm .inf h2 {
+.form-crm .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.inf h2 {
   color: var(--color-wh);
 }
-.form-crm .inf__pr {
+.inf__pr {
   color: var(--color-wh);
+}
+
+.form-bt {
+  border-radius: 20px;
+  padding: 20px;
+  background: var(--color-wh);
+}
+.form-bt__line {
+  margin-right: 20px;
+}
+
+.foto img {
+  width: 500px;
+  height: 300px;
 }/*# sourceMappingURL=style.css.map */
