--- a/style/style.scss
+++ b/style/style.scss
@@ -215,11 +215,11 @@ section {
 }
 
 .dark {
+    background: var(--bg-dark);
+    border-radius: 20px;
     h2 {
         color: var(--color-wh)
     }
-    background: var(--bg-dark);
-    border-radius: 20px;
 }
 
 .all-card {
@@ -228,6 +228,7 @@ flex-direction: row;
 gap: 20px;
 padding: 40px 35px;
     .all-card-lic {
+        grid-column: span 4;
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -270,7 +271,7 @@ padding: 40px 35px;
 .form-crm {
     border-radius: 20px;
     background: var(--primary-color);
-    .container {
+    .wr-form-crm {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -278,26 +279,44 @@ padding: 40px 35px;
 }
 
 .inf {
+    padding-top: 100px;
+    padding-bottom: 100px;
     h2 {
+        width: 100%;
+        max-width: 800px;
         color: var(--color-wh)
     }
     &__pr {
         color: var(--color-wh);
+        max-width: 761px;
+        width: 100%;
+        margin-bottom: 60px;
     }
 }
 
-.form-bt {
+input {
     border-radius: 20px;
     padding: 20px;
     background: var(--color-wh);
+    border: none;
+    text-align: left;
+}
+
+.form-bt {
     &__line {
         margin-right: 20px;
+        width: 100%;
+        max-width: 426px;
     }
 }
 
 .foto {
+    position: relative;
     img {
-        width: 500px;
-        height: 300px;
+        position: absolute;
+        height: 100%;
+        width: 400px;
+        right: -60px;
+        border-radius: 20px;
     }
 }
