--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,10 @@ a.active, a {
   outline: none;
 }
 
+a, button {
+  cursor: pointer;
+}
+
 :root {
   --color-number: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%);
   --color-bt: linear-gradient(272.85deg, #181919 -6.44%, #205ADD 111.44%);
@@ -157,7 +161,9 @@ section {
   justify-content: space-between;
 }
 .wr-title .link-disc {
-  color: rgb(0, 0, 0);
+  color: rgba(0, 0, 0, 0.5);
+  padding-top: 60px;
+  text-decoration: underline;
 }
 
 .basic {
@@ -170,7 +176,8 @@ section {
   padding: 40px 20px;
   max-width: 426px;
   width: 100%;
-  background-color: #fff;
+  background: var(--bg-dark);
+  color: var(--color-wh);
   border-radius: 20px;
 }
 .basic-text__title {
@@ -187,6 +194,7 @@ section {
   width: 100%;
   font-size: 1.5rem;
   text-align: left;
+  background: #0078CF;
 }
 
 .all-serv {
@@ -199,7 +207,8 @@ section {
 }
 
 .link-serv {
-  color: #000;
+  background: var(--bg-dark);
+  color: var(--color-wh);
   grid-column: span 4;
 }
 .link-serv__title {
@@ -236,8 +245,13 @@ section {
   margin: 0 auto;
 }
 .card-text__lic {
+  margin-top: 30px;
   font-size: 1.25rem;
-  color: rgb(0, 0, 0);
+  color: rgba(0, 0, 0, 0.5);
+}
+.card-text__name {
+  font-size: 2.25rem;
+  font-weight: 600;
 }
 
 .stages {
@@ -249,17 +263,24 @@ section {
 .card-st {
   width: 100%;
   max-width: 493px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.card-st__title {
+.card-st .card-top__title {
   margin-bottom: 22px;
 }
-.card-st__text {
+.card-st .card-top__text {
   font-size: 1.25rem;
   margin-bottom: 70px;
 }
-.card-st__result {
-  color: rgb(0, 0, 0);
+.card-st .card-bot {
   font-size: 1.25rem;
+  max-width: 334px;
+  width: 100%;
+}
+.card-st .card-bot__result {
+  color: rgba(0, 0, 0, 0.5);
   margin-bottom: 10px;
 }
 
@@ -324,5 +345,103 @@ input {
   display: flex;
   flex-direction: row;
   gap: 36px;
+}
+
+.card-adv {
+  padding: 40px 20px;
   width: 100%;
+}
+.card-adv span {
+  background: var(--color-number);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: 6rem;
+  font-weight: 500;
+}
+.card-adv__par {
+  font-size: 1.25rem;
+}
+
+.cases {
+  background: var(--color-wh);
+  border-radius: 20px;
+}
+.cases .all-cases {
+  color: var(--color-wh);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 100px;
+}
+
+.cases-card {
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 20px;
+  background: var(--primary-color);
+}
+.cases-card__btn {
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 20px;
+}
+.cases-card__btn button {
+  background: none;
+}
+
+.wr-cases {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 700px;
+}
+.wr-cases__result {
+  background: var(--color-wh);
+  padding: 7px;
+  border-radius: 20px;
+}
+.wr-cases__result p {
+  color: #000;
+}
+
+.reviews {
+  position: relative;
+}
+
+.card-basic {
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+  position: absolute;
+  top: 300px;
+  left: 300px;
+  display: flex;
+  flex-direction: row;
+  max-width: 810px;
+  width: 100%;
+}
+
+.card-rev {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+.card-rev__text {
+  max-width: 320px;
+  width: 100%;
+}
+.card-rev__text h3 {
+  font-size: 2rem;
+  margin-bottom: 5px;
+}
+.card-rev__text p {
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.card-disc {
+  font-size: 1.5rem;
 }/*# sourceMappingURL=style.css.map */
