--- a/style/style.scss
+++ b/style/style.scss
@@ -20,6 +20,10 @@ a.active, a {
     outline: none;
 }
 
+a, button {
+    cursor: pointer;
+}
+
 
 :root {
     --color-number: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%);
@@ -159,7 +163,9 @@ section {
     flex-direction: row;
     justify-content: space-between;
     .link-disc {
-        color: rgba(0, 0, 0, 1);
+        color: rgba(0, 0, 0, 0.5);
+        padding-top: 60px;
+        text-decoration: underline;
     }
 }
 
@@ -173,7 +179,8 @@ section {
     padding: 40px 20px;
     max-width: 426px;
     width: 100%;
-    background-color: #fff;
+    background: var(--bg-dark);
+    color: var(--color-wh);
     border-radius: 20px;
     &__title {
         font-size: var(--size-h3);
@@ -190,6 +197,7 @@ section {
     width: 100%;
     font-size: 1.5rem;
     text-align: left;
+    background: #0078CF;
 }
 
 .all-serv {
@@ -202,7 +210,8 @@ section {
 
 
 .link-serv {
-    color: #000;
+    background: var(--bg-dark);
+    color: var(--color-wh);
     grid-column: span 4;
     &__title {
         font-size: 2.25rem;
@@ -238,8 +247,13 @@ padding: 40px 35px;
 .card-text {
     margin: 0 auto;
     &__lic {
+        margin-top: 30px;
         font-size: 1.25rem;
-        color: rgba(0, 0, 0, 1);
+        color: rgba(0, 0, 0, 0.5);
+    }
+    &__name {
+        font-size: 2.25rem;
+        font-weight: 600;
     }
 }
 
@@ -252,19 +266,27 @@ padding: 40px 35px;
 .card-st {
     width: 100%;
     max-width: 493px;
-    &__title {
-        margin-bottom: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .card-top {
+        &__title {
+            margin-bottom: 22px;
+        }
+    
+        &__text {
+            font-size: 1.25rem;
+            margin-bottom: 70px;
+        }
     }
-
-    &__text {
+    .card-bot {
         font-size: 1.25rem;
-        margin-bottom: 70px;
-    }
-
-    &__result {
-        color: rgba(0, 0, 0, 1);
-        font-size: 1.25rem;
-        margin-bottom: 10px;
+        max-width: 334px;
+        width: 100%;
+        &__result {
+            color: rgba(0, 0, 0, 0.5);
+            margin-bottom: 10px;
+        }
     }
 }
 
@@ -331,5 +353,104 @@ input {
     display: flex;
     flex-direction: row;
     gap: 36px;
+}
+
+.card-adv {
+    padding: 40px 20px;
     width: 100%;
+    span {
+        background: var(--color-number);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+        font-size: 6rem;
+        font-weight: 500;
+    }
+    &__par {
+        font-size: 1.25rem;
+    }
+}
+
+.cases {
+    background: var(--color-wh); 
+    border-radius: 20px;
+        .all-cases {
+            color: var(--color-wh);
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-bottom: 100px;
+        }
+}
+
+.cases-card {
+    padding: 40px 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 20px;
+    background: var(--primary-color);
+    &__btn {
+        border: 1px solid rgba(255, 255, 255, 1);
+        border-radius: 20px;
+        button {
+            background: none;
+        }
+    }
+}
+
+.wr-cases {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 700px;
+    &__result {
+        background: var(--color-wh);
+        padding: 7px;
+        border-radius: 20px;
+        p {
+            color:#000;
+        }
+    }
+}
+
+.reviews {
+    position: relative;
+}
+
+.card-basic {
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 20px;
+    position: absolute;
+    top: 300px;
+    left: 300px;
+    display: flex;
+    flex-direction: row;
+    max-width: 810px;
+    width: 100%;
+
+}
+
+.card-rev {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    &__text {
+        max-width: 320px;
+        width: 100%;
+        h3 {
+            font-size: 2rem;
+            margin-bottom: 5px;
+        }
+        p {
+            font-size: 1.5rem;
+            color: rgba(0, 0, 0, 0.5);
+        }
+    }
+}
+
+.card-disc {
+    font-size: 1.5rem;
 }
