--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,7 @@ body {
 }
 
 h2 {
+  font-family: "cygre medium";
   font-size: var(--size-h2);
   color: var(--text-color);
   text-align: left;
@@ -121,7 +122,7 @@ section {
   line-height: 76px;
 }
 .home-left__title span {
-  font-weight: 600;
+  font-family: "cygre medium";
 }
 .home-left__par {
   margin-bottom: 80px;
@@ -144,7 +145,7 @@ section {
 
 .btn {
   font-family: "cygre";
-  background: var(--primary-color);
+  background: #00CEDB;
   padding: 10px 20px;
   border-radius: 20px;
   color: var(--color-wh);
@@ -194,7 +195,6 @@ section {
   width: 100%;
   font-size: 1.5rem;
   text-align: left;
-  background: #0078CF;
 }
 
 .all-serv {
@@ -286,7 +286,7 @@ section {
 
 .form-crm {
   border-radius: 20px;
-  background: var(--primary-color);
+  background: linear-gradient(301.05deg, #fff 5.87%, #205ADD 91.47%);
 }
 .form-crm .wr-form-crm {
   display: flex;
@@ -333,6 +333,10 @@ input {
   width: 400px;
   right: -60px;
   border-radius: 20px;
+}
+
+.advantages {
+  color: var(--color-wh);
 }
 
 .adv-text {
