--- a/style/style.scss
+++ b/style/style.scss
@@ -24,7 +24,6 @@ a, button {
     cursor: pointer;
 }
 
-
 :root {
     --color-number: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%);
     --color-bt: linear-gradient(272.85deg, #181919 -6.44%, #205ADD 111.44%);
@@ -43,6 +42,7 @@ body {
 }
 
 h2 {
+    font-family: 'cygre medium';
     font-size: var(--size-h2);
     color: var(--text-color);
     text-align: left;
@@ -122,7 +122,7 @@ section {
         margin-bottom: 60px;
         line-height: 76px;
         span {
-            font-weight: 600;
+            font-family: 'cygre medium';
         }
     }
     &__par {
@@ -147,7 +147,7 @@ section {
 
 .btn {
     font-family: 'cygre';
-    background: var(--primary-color);
+    background: #00CEDB;
     padding: 10px 20px;
     border-radius: 20px;
     color: var(--color-wh);
@@ -197,7 +197,6 @@ section {
     width: 100%;
     font-size: 1.5rem;
     text-align: left;
-    background: #0078CF;
 }
 
 .all-serv {
@@ -292,7 +291,7 @@ padding: 40px 35px;
 
 .form-crm {
     border-radius: 20px;
-    background: var(--primary-color);
+    background: linear-gradient(301.05deg, #fff 5.87%, #205ADD 91.47%);
     .wr-form-crm {
         display: flex;
         flex-direction: row;
@@ -341,6 +340,10 @@ input {
         right: -60px;
         border-radius: 20px;
     }
+}
+
+.advantages {
+    color: var(--color-wh);
 }
 
 .adv-text {
