--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,12 @@
 @font-face {
     font-family: 'cygre';
     src: url("../cygre_default/Cygre-Light.ttf");
+    src: url("../cygre_default/Cygre-Bold.ttf");
+    src: url("../cygre_default/Cygre-ExtraBold.ttf");
+    src: url("../cygre_default/Cygre-Medium.ttf");
+    src: url("../cygre_default/Cygre-Regular.ttf");
+    src: url("../cygre_default/Cygre-SemiBold.ttf");
+    src: url("../cygre_default/Cygre-Thin.ttf");
     font-weight: normal;
 }
 
