--- a/style/style.scss
+++ b/style/style.scss
@@ -30,6 +30,7 @@ a, button {
     cursor: pointer;
 }
 
+
 :root {
     --color-number: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%);
     --color-bt: linear-gradient(272.85deg, #181919 -6.44%, #205ADD 111.44%);
@@ -153,7 +154,7 @@ section {
 
 .btn {
     font-family: 'cygre';
-    background: #00CEDB;
+    background: #205ADD;
     padding: 10px 20px;
     border-radius: 20px;
     color: var(--color-wh);
@@ -203,6 +204,7 @@ section {
     width: 100%;
     font-size: 1.5rem;
     text-align: left;
+    background: #205ADD;
 }
 
 .all-serv {
@@ -276,6 +278,11 @@ padding: 40px 35px;
     justify-content: space-between;
     .card-top {
         &__title {
+            font-family: 'cygre semibold';
+            background: var(--color-number);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
             margin-bottom: 22px;
         }
     
@@ -297,7 +304,7 @@ padding: 40px 35px;
 
 .form-crm {
     border-radius: 20px;
-    background: linear-gradient(301.05deg, #fff 5.87%, #205ADD 91.47%);
+    background: var(--primary-color);
     .wr-form-crm {
         display: flex;
         flex-direction: row;
@@ -348,10 +355,6 @@ input {
     }
 }
 
-.advantages {
-    color: var(--color-wh);
-}
-
 .adv-text {
     display: flex;
     flex-direction: row;
@@ -368,6 +371,7 @@ input {
     padding: 40px 20px;
     width: 100%;
     span {
+        font-family: 'cygre medium';
         background: var(--color-number);
         -webkit-background-clip: text;
         background-clip: text;
@@ -462,4 +466,130 @@ input {
 
 .card-disc {
     font-size: 1.5rem;
+}
+
+.news {
+    .card-wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        width: 100%;
+    }
+}
+
+.blog {
+    padding: 20px;
+    .card-image {
+        width: 100%;
+        height: 410px;
+        border-radius: 20px;
+        margin-bottom: 20px;
+    }
+
+}
+
+.card-inf {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 379px;
+    &__title {
+        font-family: 'cygre medium';
+        font-size: 2rem;
+        margin-right: 50px;
+    }
+    .card-arrow {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        &__data {
+            color: rgba(0, 0, 0, 0.5);
+        }
+
+        &__circle {
+            border-radius: 50px;
+            height: 40px;
+            width: 40px;
+            background: var(--primary-color);
+            position: relative;
+            svg {
+                position: absolute;
+                top: 15px;
+                left: 10px;
+            }
+        }
+    }
+}
+
+.faq-wr {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.faq__elements {
+    margin-bottom: 20px;
+    border-radius: 20px;
+}
+
+.faq__case {
+    width: 100%;
+}
+
+.faq__button {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: inset -50px 4px 50px 0px rgba(255, 255, 255, 0.69);
+    -webkit-backdrop-filter: blur(100px);
+    backdrop-filter: blur(100px);
+    background: rgba(255, 255, 255, 1);
+    padding: 20px;
+}
+
+.faq__button::after {
+    content: "";
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 60px;
+    height: 60px;
+    background: #F4F4F4;
+    border-radius: 20px;
+}
+
+.faq__title {
+    width: 77%;
+    font-size: 2rem;
+    font-family: 'cygre medium';
+    margin-bottom: 20px;
+}
+
+.faq__text {
+    font-size: 1.25rem;
+}
+
+.project {
+    padding: 100px 60px;
+    background: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%),
+    linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
+    color: var(--color-wh);
+    border-radius: 40px;
+    h2 {
+        color: var(--color-wh);
+    }
+    .title {
+        max-width: 645px;
+        width: 100%;
+        margin-bottom: 100px;
+        p {
+            font-size: 2rem;
+        }
+    }
+    .wr-form {
+        display: flex;
+        flex-direction: row;
+    }
 }
