--- a/style/style.css
+++ b/style/style.css
@@ -227,8 +227,13 @@ section {
   font-size: 1.5rem;
 }
 
+.link-serv:hover {
+  background: var(--color-wh);
+  color: var(--bg-dark);
+}
+
 .dark {
-  background: var(--bg-dark);
+  background: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%), linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
   border-radius: 20px;
 }
 .dark h2 {
@@ -394,7 +399,7 @@ input {
   flex-direction: row;
   justify-content: space-between;
   border-radius: 20px;
-  background: var(--primary-color);
+  background: var(--bg-dark);
 }
 .cases-card__btn {
   border: 1px solid rgb(255, 255, 255);
@@ -578,4 +583,31 @@ input {
 .project .wr-form {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+}
+
+.left-form {
+  max-width: 575px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-bottom: 175px;
+}
+.left-form .bottom {
+  width: 100%;
+}
+.left-form .checkbox {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  margin-bottom: 90px;
+}
+
+.details {
+  margin-bottom: 70px;
+}
+.details__text {
+  font-size: 1.25rem;
+  color: rgba(255, 255, 255, 0.5);
 }/*# sourceMappingURL=style.css.map */
