--- a/style/style.scss
+++ b/style/style.scss
@@ -230,8 +230,14 @@ section {
     }
 }
 
+.link-serv:hover {
+    background: var(--color-wh);
+    color: var(--bg-dark)
+}
+
 .dark {
-    background: var(--bg-dark);
+    background: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%),
+    linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
     border-radius: 20px;
     h2 {
         color: var(--color-wh)
@@ -402,7 +408,7 @@ input {
     flex-direction: row;
     justify-content: space-between;
     border-radius: 20px;
-    background: var(--primary-color);
+    background: var(--bg-dark);
     &__btn {
         border: 1px solid rgba(255, 255, 255, 1);
         border-radius: 20px;
@@ -591,5 +597,32 @@ input {
     .wr-form {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.left-form {
+    max-width: 575px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 175px;
+    .bottom {
+        width: 100%;
+    }
+    .checkbox {
+        display: flex;
+        flex-direction: row;
+        gap: 12px;
+        margin-bottom: 90px;
+    }
+}
+
+.details {
+    margin-bottom: 70px;
+    &__text {
+        font-size: 1.25rem;
+        color: rgba(255, 255, 255, 0.5)
     }
 }
