--- a/style/style.css
+++ b/style/style.css
@@ -233,7 +233,7 @@ section {
 }
 
 .dark {
-  background: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%), linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
+  background: linear-gradient(117.4deg, #181919 40.27%, #1b3675 105%), linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
   border-radius: 20px;
 }
 .dark h2 {
@@ -303,7 +303,7 @@ section {
 
 .form-crm {
   border-radius: 20px;
-  background: var(--primary-color);
+  border: 2px solid #fff;
 }
 .form-crm .wr-form-crm {
   display: flex;
@@ -564,6 +564,7 @@ input {
 }
 
 .project {
+  color: #000;
   padding: 100px 60px;
   background: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%), linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
   color: var(--color-wh);
@@ -602,6 +603,19 @@ input {
   flex-direction: row;
   gap: 12px;
   margin-bottom: 90px;
+}
+
+.right-number {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+.right-number .el-text p {
+  margin-bottom: 10px;
+}
+.right-number .el-text a {
+  font-size: 2rem;
+  color: var(--color-wh);
 }
 
 .details {
