--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,7 @@ a, button {
 
 body {
   background: var(--bg-basic);
+  color: var(--text-color);
 }
 
 h2 {
@@ -53,6 +54,7 @@ h2 {
   text-align: left;
   font-weight: 500;
   margin-bottom: 60px;
+  line-height: 76.8px;
 }
 
 h3 {
@@ -94,7 +96,7 @@ section {
 }
 .menu-header .nav-menu a {
   font-size: 0.87rem;
-  color: #000;
+  color: var(--text-color);
 }
 
 .button-tel {
@@ -102,8 +104,10 @@ section {
   flex-direction: row;
   gap: 13px;
 }
-.button-tel__number {
+.button-tel__number a {
+  color: var(--text-color);
   font-size: 0.87rem;
+  font-weight: 700;
 }
 
 .container {
@@ -169,7 +173,7 @@ section {
 }
 .wr-title .link-disc {
   color: rgba(0, 0, 0, 0.5);
-  padding-top: 60px;
+  padding-top: 50px;
   text-decoration: underline;
 }
 
@@ -252,6 +256,11 @@ section {
   display: flex;
   flex-direction: row;
 }
+.all-card .all-card-lic:hover {
+  transform: translateX(5px);
+  transition: all 300ms ease-out;
+  background: linear-gradient(107.79deg, #FFFFFF 12.04%, #C8C8C8 91.79%);
+}
 
 .card-text {
   margin: 0 auto;
@@ -270,6 +279,17 @@ section {
   display: flex;
   flex-direction: row;
   gap: 20px;
+}
+
+.stages-title {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+.stages-title__arrow {
+  position: absolute;
+  top: 200px;
+  right: 30px;
 }
 
 .card-st {
@@ -303,7 +323,6 @@ section {
 
 .form-crm {
   border-radius: 20px;
-  border: 2px solid #fff;
 }
 .form-crm .wr-form-crm {
   display: flex;
@@ -356,6 +375,11 @@ input {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 95px;
+}
+.adv-text__par {
+  padding-top: 30px;
+  font-size: 1.25rem;
 }
 
 .number-adv {
@@ -422,7 +446,7 @@ input {
   border-radius: 20px;
 }
 .wr-cases__result p {
-  color: #000;
+  color: var(--text-color);
 }
 
 .reviews {
@@ -608,7 +632,12 @@ input {
 .right-number {
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+.right-number .el-text {
+  width: 100%;
+  max-width: 525px;
 }
 .right-number .el-text p {
   margin-bottom: 10px;
@@ -618,10 +647,45 @@ input {
   color: var(--color-wh);
 }
 
+iframe {
+  border-radius: 20px;
+}
+
 .details {
   margin-bottom: 70px;
 }
 .details__text {
   font-size: 1.25rem;
   color: rgba(255, 255, 255, 0.5);
+}
+
+.bottom-ft {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 50px;
+}
+.bottom-ft .number-footer {
+  margin-bottom: 60px;
+}
+.bottom-ft .number-footer .number {
+  font-size: 2rem;
+  color: rgb(24, 25, 25);
+}
+.bottom-ft .logo-footer {
+  display: flex;
+  flex-direction: column;
+}
+.bottom-ft .logo-footer img {
+  margin-bottom: 50px;
+}
+
+.ft-adress {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1.25rem;
+}
+
+footer p {
+  font-size: 1.25rem;
+  color: rgb(24, 25, 25);
 }/*# sourceMappingURL=style.css.map */
