--- a/style/style.scss
+++ b/style/style.scss
@@ -46,6 +46,7 @@ a, button {
 
 body {
     background: var(--bg-basic);
+    color: var(--text-color);
 }
 
 h2 {
@@ -55,6 +56,9 @@ h2 {
     text-align: left;
     font-weight: 500;
     margin-bottom: 60px;
+    line-height: 76.8px;
+
+
 }
 
 h3 {
@@ -95,7 +99,7 @@ section {
         gap: 20px;
         a {
             font-size: 0.87rem;
-            color: #000;
+            color: var(--text-color)
         }
     }
 }
@@ -105,7 +109,11 @@ section {
     flex-direction: row;
     gap: 13px;
     &__number {
-        font-size: 0.87rem;
+        a {
+            color: var(--text-color);
+            font-size: 0.87rem;
+            font-weight: 700;
+        }
     }
 }
 
@@ -171,7 +179,7 @@ section {
     justify-content: space-between;
     .link-disc {
         color: rgba(0, 0, 0, 0.5);
-        padding-top: 60px;
+        padding-top: 50px;
         text-decoration: underline;
     }
 }
@@ -255,6 +263,14 @@ padding: 40px 35px;
         display: flex;
         flex-direction: row;
     }
+    .all-card-lic:hover {
+        // While hovering
+    // Change to: "Variant2";
+    // Animate: Smart animate;
+        transform: translateX(5px);
+        transition: all 300ms ease-out;
+        background: linear-gradient(107.79deg, #FFFFFF 12.04%, #C8C8C8 91.79%);
+    }
 }
 
 .card-text {
@@ -274,6 +290,17 @@ padding: 40px 35px;
     display: flex;
     flex-direction: row;
     gap: 20px;
+}
+
+.stages-title {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    &__arrow {
+        position: absolute;
+        top: 200px;
+        right: 30px;
+    }
 }
 
 .card-st {
@@ -310,7 +337,6 @@ padding: 40px 35px;
 
 .form-crm {
     border-radius: 20px;
-    border: 2px solid #fff;
     .wr-form-crm {
         display: flex;
         flex-direction: row;
@@ -365,6 +391,11 @@ input {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 95px;
+    &__par {
+        padding-top: 30px;
+        font-size: 1.25rem;
+    }
 }
 
 .number-adv {
@@ -429,7 +460,7 @@ input {
         padding: 7px;
         border-radius: 20px;
         p {
-            color:#000;
+            color: var(--text-color);
         }
     }
 }
@@ -580,8 +611,7 @@ input {
 .project {
     color:#000;
     padding: 100px 60px;
-    background: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%),
-    linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
+    background: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%), linear-gradient(202.87deg, rgba(24, 25, 25, 0.2) 50.88%, rgba(32, 90, 221, 0.2) 67.67%);
     color: var(--color-wh);
     border-radius: 40px;
     h2 {
@@ -623,8 +653,11 @@ input {
 .right-number {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    justify-content: space-between;
+    margin-bottom: 50px;
     .el-text {
+        width: 100%;
+        max-width: 525px;
         p {
             margin-bottom: 10px;
         }
@@ -635,10 +668,47 @@ input {
     }
 }
 
+iframe {
+    border-radius: 20px;
+}
+
 .details {
     margin-bottom: 70px;
     &__text {
         font-size: 1.25rem;
         color: rgba(255, 255, 255, 0.5)
+    }
+}
+
+.bottom-ft {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 50px;
+    .number-footer {
+        margin-bottom: 60px;
+        .number {
+            font-size: 2rem;
+            color: rgba(24, 25, 25, 1);
+        }
+    }
+    .logo-footer {
+        display: flex;
+        flex-direction: column;
+        img {
+            margin-bottom: 50px;
+        }
+    }
+}
+
+.ft-adress {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 1.25rem;
+}
+
+footer {
+    p {
+        font-size: 1.25rem;
+        color: rgba(24, 25, 25, 1);
     }
 }
