--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "cygre";
   src: url("../cygre_default/Cygre-Light.ttf");
@@ -25,7 +26,8 @@ a.active, a {
   outline: none;
 }
 
-a, button {
+К a,
+button {
   cursor: pointer;
 }
 
