--- a/style/style.css
+++ b/style/style.css
@@ -290,8 +290,19 @@ section {
 }
 .stages-title__arrow {
   position: absolute;
-  top: 200px;
   right: 30px;
+}
+
+.swiper-button-next {
+  max-width: 363px !important;
+  width: 100% !important;
+  height: 21px !important;
+  top: 200px !important;
+  margin-top: 0 !important;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+  bottom: 0 !important;
 }
 
 .card-st {
