--- a/style/style.scss
+++ b/style/style.scss
@@ -17,7 +17,6 @@
 }
 
 html {
-    font-family: 'cygre';
     font-size: 16px;
 }
 
@@ -45,6 +44,7 @@ a, button {
 }
 
 body {
+    font-family: 'cygre';
     background: var(--bg-basic);
     color: var(--text-color);
 }
@@ -239,9 +239,10 @@ section {
 }
 
 .link-serv:hover {
-    background: var(--color-wh);
-    color: var(--bg-dark)
+    background: linear-gradient(180deg, rgba(24, 25, 25, 1) 33.64%, #205add);
+    transition: all 300s ease-in-out;
 }
+
 
 .dark {
     background: linear-gradient(117.4deg, #181919 40.27%, #1b3675 105%),
@@ -318,15 +319,12 @@ padding: 40px 35px;
     width: 100%;
     max-width: 493px;
     display: flex;
+    background: rgba(122, 81, 227, 0.25);
     flex-direction: column;
-    justify-content: space-between;
+    color: var(--color-wh);
     .card-top {
         &__title {
             font-family: 'cygre semibold';
-            background: var(--color-number);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
             margin-bottom: 22px;
         }
     
@@ -340,14 +338,13 @@ padding: 40px 35px;
         max-width: 334px;
         width: 100%;
         &__result {
-            color: rgba(0, 0, 0, 0.5);
             margin-bottom: 10px;
         }
     }
 }
 
 .form-crm {
-    background: linear-gradient(301.05deg, #181919 5.87%, #205ADD 91.47%);
+    background: rgba(122, 81, 227, 0.25);
     border-radius: 20px;
     .wr-form-crm {
         display: flex;
@@ -722,5 +719,126 @@ footer {
     p {
         font-size: 1.25rem;
         color: rgba(24, 25, 25, 1);
+    }
+}
+
+/*Услуги */
+
+.necessity {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    &__text {
+        width: 100%;
+        max-width: 1050px;
+    }
+}
+
+.grid-card {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 21px;
+    width: 100%;
+}
+
+.wrapper-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    &__text {
+        text-align: right;
+    }
+}
+
+.bizness {
+    max-width: 1380px;
+    border-radius: 40px;
+    p {
+        font-size: 0.87rem;
+    }
+}
+
+.wr-biz {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto 2fr auto auto;
+    column-gap: 20px;
+    row-gap: 10px;
+    width: 100%;
+    &__foto {
+        grid-area: 1/1/4/3;
+    }
+    &__author {
+        grid-area: 1/3/1/7;
+        border-radius: 20px;
+        padding: 13px 15px;
+        background-color: var(--bg-gray);
+        height: 80px;
+        h4 {
+            font-family: var(--montserrat);
+            font-weight: bold;
+            text-align: center;
+        }
+        p {
+            text-align: right;
+        }
+    }
+    &__title {
+        grid-area: 1/7/1/13;
+    }
+    &__bid {
+        grid-area: 2/4/2/13;
+    }
+    &__picture {
+        grid-area: 3/4/4/6;
+    }
+    &__list {
+        grid-area: 3/7/4/13;
+    }
+    &__text {
+        grid-area: 4/7/4/13;
+        span {
+            color: #8d8d8d;
+        }
+    }
+}
+
+.card_hover {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px;
+    .card__text {
+        display: none;
+    }
+}
+
+.card_hover:hover {
+    justify-content: center;
+    background-color: gray;
+    .card__picture {
+        width: 50%;
+        height: 50%;
+    }
+    .card__text {
+        display: block;
+    }
+}
+
+.list {
+    list-style-type: none;
+    /*list-style-image: url('/img/squ.svg');*/
+    &__item {
+        display: flex;
+        flex-direction: row;
+        font-family: var(--montserrat);
+        font-weight: bold;
+        svg {
+            margin-right: 8px;
+        }
+    }
+    &__item:not(:last-child) {
+        margin-bottom: 12px;
     }
 }
