--- a/style/style.css
+++ b/style/style.css
@@ -235,7 +235,8 @@ section {
 
 .link-serv:hover {
   background: linear-gradient(180deg, rgb(24, 25, 25) 33.64%, #205add);
-  transition: all 300s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  transform: scale(1.05);
 }
 
 .dark {
@@ -330,10 +331,6 @@ section {
   margin-bottom: 10px;
 }
 
-.form-crm {
-  background: rgba(122, 81, 227, 0.25);
-  border-radius: 20px;
-}
 .form-crm .wr-form-crm {
   display: flex;
   flex-direction: row;
@@ -375,7 +372,6 @@ input {
 }
 .foto img {
   position: absolute;
-  height: 100%;
   width: 400px;
   right: -60px;
   border-radius: 20px;
@@ -583,6 +579,7 @@ input {
   width: 60px;
   height: 60px;
   background: #F4F4F4;
+  background-image: url(../img/plus.svg);
   border-radius: 20px;
 }
 
@@ -595,6 +592,15 @@ input {
 
 .faq__text {
   font-size: 1.25rem;
+}
+
+.faq__button::after {
+  background-image: url(/img/faq_arrow.svg);
+}
+
+.faq__button[aria-expanded=true]::after {
+  transform: rotate(30deg);
+  align-self: end;
 }
 
 .project {
@@ -751,18 +757,22 @@ footer p {
   grid-area: 1/3/1/7;
   border-radius: 20px;
   padding: 13px 15px;
-  background-color: var(--bg-gray);
+  background-color: var(--bg-dark);
   height: 80px;
 }
 .wr-biz__author h4 {
-  font-family: var(--montserrat);
   font-weight: bold;
   text-align: center;
+  color: var(--color-wh);
 }
 .wr-biz__author p {
+  color: var(--color-wh);
   text-align: right;
 }
 .wr-biz__title {
+  font-family: "cygre semibold";
+  line-height: normal;
+  font-size: 1.5rem;
   grid-area: 1/7/1/13;
 }
 .wr-biz__bid {
@@ -782,6 +792,8 @@ footer p {
 }
 
 .card_hover {
+  background: var(--bg-dark);
+  color: var(--color-wh);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -794,7 +806,6 @@ footer p {
 
 .card_hover:hover {
   justify-content: center;
-  background-color: gray;
 }
 .card_hover:hover .card__picture {
   width: 50%;
@@ -811,7 +822,6 @@ footer p {
 .list__item {
   display: flex;
   flex-direction: row;
-  font-family: var(--montserrat);
   font-weight: bold;
 }
 .list__item svg {
