--- a/style/style.css
+++ b/style/style.css
@@ -591,16 +591,17 @@ input {
 }
 
 .faq__text {
+  display: block;
   font-size: 1.25rem;
-}
-
-.faq__button::after {
-  background-image: url(/img/faq_arrow.svg);
 }
 
 .faq__button[aria-expanded=true]::after {
   transform: rotate(30deg);
   align-self: end;
+}
+
+.faq__button::after {
+  background-image: url(/img/faq_arrow.svg);
 }
 
 .project {
@@ -707,6 +708,11 @@ footer p {
 }
 
 /*Услуги */
+.black {
+  background-color: var(--bg-dark);
+  color: var(--color-wh);
+}
+
 .necessity {
   display: flex;
   flex-direction: column;
@@ -715,6 +721,13 @@ footer p {
 .necessity__text {
   width: 100%;
   max-width: 1050px;
+}
+
+.up-title {
+  color: var(--color-wh);
+}
+.up-title span {
+  font-size: 2rem;
 }
 
 .grid-card {
@@ -754,10 +767,10 @@ footer p {
   grid-area: 1/1/4/3;
 }
 .wr-biz__author {
+  background: gray;
   grid-area: 1/3/1/7;
   border-radius: 20px;
   padding: 13px 15px;
-  background-color: var(--bg-dark);
   height: 80px;
 }
 .wr-biz__author h4 {
@@ -770,6 +783,7 @@ footer p {
   text-align: right;
 }
 .wr-biz__title {
+  color: var(--color-wh);
   font-family: "cygre semibold";
   line-height: normal;
   font-size: 1.5rem;
@@ -792,8 +806,7 @@ footer p {
 }
 
 .card_hover {
-  background: var(--bg-dark);
-  color: var(--color-wh);
+  color: #000;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -805,6 +818,7 @@ footer p {
 }
 
 .card_hover:hover {
+  background: gray;
   justify-content: center;
 }
 .card_hover:hover .card__picture {
@@ -829,4 +843,20 @@ footer p {
 }
 .list__item:not(:last-child) {
   margin-bottom: 12px;
+}
+
+.grid-st {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  row-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.grid-st .number-st {
+  background: var(--color-wh);
+  border-radius: 20px;
+  color: #000;
+  grid-column: span 6;
+  padding: 30px 40px;
 }/*# sourceMappingURL=style.css.map */
