--- a/style/style.scss
+++ b/style/style.scss
@@ -612,16 +612,18 @@ input {
 }
 
 .faq__text {
+    display: block;
     font-size: 1.25rem;
 }
 
-.faq__button::after {
-    background-image: url(/img/faq_arrow.svg);
-}
 
 .faq__button[aria-expanded="true"]::after {
     transform: rotate(30deg);
     align-self: end;
+}
+
+.faq__button::after {
+    background-image: url(/img/faq_arrow.svg);
 }
 
 .project {
@@ -731,6 +733,11 @@ footer {
 
 /*Услуги */
 
+.black {
+    background-color: var(--bg-dark);
+    color: var(--color-wh)
+}
+
 .necessity {
     display: flex;
     flex-direction: column;
@@ -740,6 +747,14 @@ footer {
         max-width: 1050px;
     }
 }
+
+.up-title {
+    color: var(--color-wh);
+    span {
+        font-size: 2rem;
+    }
+}
+
 
 .grid-card {
     display: grid;
@@ -776,10 +791,10 @@ footer {
         grid-area: 1/1/4/3;
     }
     &__author {
+        background: gray;
         grid-area: 1/3/1/7;
         border-radius: 20px;
         padding: 13px 15px;
-        background-color: var(--bg-dark);
         height: 80px;
         h4 {
             font-weight: bold;
@@ -792,6 +807,7 @@ footer {
         }
     }
     &__title {
+        color: var(--color-wh);
         font-family: 'cygre semibold';
         line-height: normal;
         font-size: 1.5rem;
@@ -815,8 +831,7 @@ footer {
 }
 
 .card_hover {
-    background: var(--bg-dark);
-    color: var(--color-wh);
+    color:#000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -828,6 +843,7 @@ footer {
 }
 
 .card_hover:hover {
+    background: gray;
     justify-content: center;
     .card__picture {
         width: 50%;
@@ -851,5 +867,20 @@ footer {
     }
     &__item:not(:last-child) {
         margin-bottom: 12px;
+    }
+}
+
+.grid-st {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    row-gap: 20px;
+    column-gap: 20px;
+    .number-st {
+        background: var(--color-wh);
+        border-radius: 20px;
+        color: #000;
+        grid-column: span 6;
+        padding: 30px 40px;
     }
 }
