--- a/style/style.scss
+++ b/style/style.scss
@@ -352,15 +352,15 @@ padding: 40px 35px;
 }
 
 .inf {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 20px;
+    padding: 100px;
     h2 {
         width: 100%;
         max-width: 800px;
-        color: var(--color-wh)
     }
     &__pr {
-        color: var(--color-wh);
         max-width: 761px;
         width: 100%;
         margin-bottom: 60px;
@@ -387,8 +387,9 @@ input {
     position: relative;
     img {
         position: absolute;
-        width: 400px;
-        right: -60px;
+        width: 700px;
+        top: 70px;
+        right: -30px;
         border-radius: 20px;
     }
 }
@@ -882,5 +883,7 @@ footer {
         color: #000;
         grid-column: span 6;
         padding: 30px 40px;
+        display: flex;
+        flex-direction: row;
     }
 }
