--- a/style/style.css
+++ b/style/style.css
@@ -189,8 +189,7 @@ section {
   padding: 40px 20px;
   max-width: 426px;
   width: 100%;
-  background: var(--bg-dark);
-  color: var(--color-wh);
+  background: var(--color-wh);
   border-radius: 20px;
 }
 .basic-text__title {
@@ -310,7 +309,7 @@ section {
   width: 100%;
   max-width: 493px;
   display: flex;
-  background: rgba(122, 81, 227, 0.25);
+  background: rgba(245, 243, 248, 0.25);
   flex-direction: column;
   color: var(--color-wh);
 }
@@ -341,7 +340,8 @@ section {
   z-index: 1;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 20px;
-  padding: 100px;
+  padding: 80px;
+  margin-bottom: 100px;
 }
 .inf h2 {
   width: 100%;
@@ -373,6 +373,7 @@ input {
 .foto img {
   position: absolute;
   width: 700px;
+  height: 530px;
   top: 70px;
   right: -30px;
   border-radius: 20px;
@@ -814,6 +815,9 @@ footer p {
   gap: 20px;
   padding: 20px;
 }
+.card_hover .card__picture {
+  width: 220px;
+}
 .card_hover .card__text {
   display: none;
 }
@@ -859,7 +863,35 @@ footer p {
   border-radius: 20px;
   color: #000;
   grid-column: span 6;
-  padding: 30px 40px;
+  padding: 40px;
   display: flex;
   flex-direction: row;
+  position: relative;
+}
+.grid-st .number-st .text-basic {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 60%;
+}
+.grid-st .number-st .text-foto {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.grid-st .number-st .more-details {
+  margin-top: 250px;
+}
+
+.big-num {
+  top: -250px;
+  right: -5px;
+  position: absolute;
+  font-size: 20rem;
+  font-family: "cygre semibold";
+  color: rgba(60, 58, 58, 0.87);
+}
+
+.bold {
+  font-family: "cygre semibold";
 }/*# sourceMappingURL=style.css.map */
