--- a/style/media.scss
+++ b/style/media.scss
@@ -2,6 +2,11 @@
     h2 {
         font-size: 3.5rem;
     } 
+
+    h3 {
+        font-size: 2.2rem;
+    }
+
     .container {
         margin: 0 auto;
     }
@@ -49,6 +54,20 @@
         .card-wrapper {
             display: flex;
             flex-direction: column;
+        }
+    }
+    .grid-card {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        .card_hover {
+            grid-column: span 6;
+        }
+    }
+    .wr-biz {
+        display: flex;
+        flex-direction: column;
+        &__foto {
+            display: none;
         }
     }
 }
