--- a/style/style.scss
+++ b/style/style.scss
@@ -364,6 +364,7 @@ padding: 40px 35px;
     border-radius: 20px;
     padding: 80px;
     margin-bottom: 100px;
+    color: var(--color-wh);
     h2 {
         width: 100%;
         max-width: 800px;
